# Nested_Rectangles

./: .gitignore  CMakeLists.txt  README.md  project.vim
Assets/: CMakeLists.txt
Config/: CMakeLists.txt  Notes.md  layout.xml
Libraries/: README.md  trim_libraries.py
Libraries/SDL2_gfx/: CMakeLists.txt
Libraries/liquidfun-1.1.0/freeglut/: version.cmake_
Libraries/tinyxml/: CMakeLists.txt
Libraries/tinyxml/tinyxml/: tinyxml.h
Source/: CMakeLists.txt  Definitions.h  Game.h  GraphicsSystem.h  InputSystem.h  NestedRectangles.cpp  Screen.h  Source.cpp  Texture.h
lib/: CMakeLists.txt  README.md
lib/tinyxml-old/: CMakeLists.txt
src/: Box.h  CMakeLists.txt  Component.cpp  Component.h  Definitions.cpp  Definitions.h  Entity.cpp  Entity.h  Game.h  GraphicsSystem.h  InputSystem.h  Logger.cpp  Logger.h  Screen.h  Source.cpp  Texture.h
